Iris manual usecase v2

--- a/iris/iris_load_data/load_data.ipynb
+++ b/iris/iris_load_data/load_data.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "'1.19.5'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "block:loaddata",
@@ -84,12 +84,12 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/usr/src/workdir/COMP_DEMO/iris/iris_load_data/iris.csv\")"
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/katonic-dev/manual_usecases/master/iris/iris_load_data/iris.csv?token=ATCRWXR3Z2ROZENTVBYONUDAWR5DO\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "skip"
