--- a/automobile/automobile-Deploy.ipynb
+++ b/automobile/automobile-Deploy.ipynb
@@ -301,12 +301,12 @@
   },
   "kubeflow_notebook": {
    "autosnapshot": false,
-   "docker_image": "",
+   "docker_image": "subhraj07/seldon-test:0.1",
    "experiment": {
-    "id": "75b16a8e-0270-4d9f-a685-2a4512632b53",
-    "name": "automobile"
+    "id": "new",
+    "name": "iris"
    },
-   "experiment_name": "automobile",
+   "experiment_name": "iris",
    "katib_metadata": {
     "algorithm": {
      "algorithmName": "grid"
@@ -321,11 +321,11 @@
     "parameters": []
    },
    "katib_run": false,
-   "pipeline_description": "manual-1",
-   "pipeline_name": "manual-1",
+   "pipeline_description": "pipe-iris-demo",
+   "pipeline_name": "pipe-iris",
    "snapshot_volumes": false,
    "steps_defaults": [],
-   "volume_access_mode": "rwm",
+   "volume_access_mode": "rwo",
    "volumes": []
   },
   "language_info": {
