--- a/e_commerce/e_commerce.ipynb
+++ b/e_commerce/e_commerce.ipynb
@@ -101,6 +101,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### Warnings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -146,15 +155,6 @@
     "#                     access_key=MINIO_ACCESS_KEY,\n",
     "#                     secret_key=MINIO_SECRET_KEY,\n",
     "#                     secure=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "#### Warnings"
    ]
   },
   {
@@ -4013,12 +4013,12 @@
   },
   "kubeflow_notebook": {
    "autosnapshot": false,
-   "docker_image": "katonic/usecase:bl-4",
+   "docker_image": "",
    "experiment": {
-    "id": "new",
-    "name": "iris"
+    "id": "",
+    "name": ""
    },
-   "experiment_name": "iris",
+   "experiment_name": "",
    "katib_metadata": {
     "algorithm": {
      "algorithmName": "grid"
@@ -4033,11 +4033,11 @@
     "parameters": []
    },
    "katib_run": false,
-   "pipeline_description": "Predict the species of iris flower",
-   "pipeline_name": "iris-preprocessing",
+   "pipeline_description": "",
+   "pipeline_name": "",
    "snapshot_volumes": false,
    "steps_defaults": [],
-   "volume_access_mode": "rwo",
+   "volume_access_mode": "rwm",
    "volumes": []
   },
   "language_info": {
