Customer churn new pipeline

--- a/automobile/automobile-preprocessing.ipynb
+++ b/automobile/automobile-preprocessing.ipynb
@@ -68,15 +68,9 @@
     "from pyspark.sql import DataFrame, SparkSession, Window\n",
     "from pyspark.sql.functions import col, expr, monotonically_increasing_id, row_number,current_timestamp\n",
     "# from data_io import *\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "from typing import  List\n",
-    "from datetime import datetime\n",
     "#from minio import Minio\n",
-    "#from minio.error import ResponseError\n",
-    "import uuid\n",
-    "import os\n",
-    "import shutil"
+    "#from minio.error import ResponseError"
    ]
   },
   {
