--- a/iris/iris-model-building.ipynb
+++ b/iris/iris-model-building.ipynb
@@ -1126,12 +1126,12 @@
   },
   "kubeflow_notebook": {
    "autosnapshot": false,
-   "docker_image": "katonic/usecase:bl-4",
+   "docker_image": "katonic/usecase:2.0",
    "experiment": {
     "id": "new",
-    "name": "iris"
+    "name": "customer-churn"
    },
-   "experiment_name": "iris",
+   "experiment_name": "customer-churn",
    "katib_metadata": {
     "algorithm": {
      "algorithmName": "grid"
@@ -1146,8 +1146,8 @@
     "parameters": []
    },
    "katib_run": false,
-   "pipeline_description": "iris-model-building",
-   "pipeline_name": "iris-model-building",
+   "pipeline_description": "Predict behavior to retain customers",
+   "pipeline_name": "customer-churn-1",
    "snapshot_volumes": false,
    "steps_defaults": [],
    "volume_access_mode": "rwo",
