--- a/amazon_revenue_forcasting/amazon_revenue_forecasting.ipynb
+++ b/amazon_revenue_forcasting/amazon_revenue_forecasting.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "DATA_LOCATION = \"https://raw.githubusercontent.com/katonic-dev/Examples/master/amazon_revenue_forcasting/amazon_revenue_data.csv\"\n",
-    "SLACK_TOKEN = \"xoxp-2115816893510-2177419509890-2605548837280-27b8b772b120dd2559a8ee80faf93e8a\"\n",
+    "SLACK_TOKEN = \"YOUR_SLACK_TOKEN"\n",
     "SLACK_CHANNEL = '#test'\n",
     "TRAIN_DATE_LIMIT = '2019-03-31'"
    ]
