--- a/amazon_revenue_forcasting/prediction.ipynb
+++ b/amazon_revenue_forcasting/prediction.ipynb
@@ -2,17 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import pickle"
+    "import os\n",
+    "os.system(\"pip install pystan==2.19.1.1 fbprophet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import pickle\n",
+    "from fbprophet import Prophet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,36 +76,36 @@
        "      <th>0</th>\n",
        "      <td>2005-03-31</td>\n",
        "      <td>-638.489979</td>\n",
-       "      <td>-4377.471106</td>\n",
-       "      <td>3349.009429</td>\n",
+       "      <td>-5037.711010</td>\n",
+       "      <td>3471.416306</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2005-06-30</td>\n",
        "      <td>-1055.257116</td>\n",
-       "      <td>-5283.013792</td>\n",
-       "      <td>3212.834837</td>\n",
+       "      <td>-5503.465639</td>\n",
+       "      <td>3322.289516</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2005-09-30</td>\n",
        "      <td>-223.253217</td>\n",
-       "      <td>-4336.419076</td>\n",
-       "      <td>3786.420251</td>\n",
+       "      <td>-4165.937326</td>\n",
+       "      <td>3894.679715</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2005-12-31</td>\n",
        "      <td>6646.043026</td>\n",
-       "      <td>2429.725217</td>\n",
-       "      <td>10364.521253</td>\n",
+       "      <td>2499.102502</td>\n",
+       "      <td>10716.517815</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2006-03-31</td>\n",
        "      <td>912.670899</td>\n",
-       "      <td>-3080.508978</td>\n",
-       "      <td>4928.635267</td>\n",
+       "      <td>-3036.385010</td>\n",
+       "      <td>4853.655537</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -102,14 +113,14 @@
       ],
       "text/plain": [
        "          ds         yhat   yhat_lower    yhat_upper\n",
-       "0 2005-03-31  -638.489979 -4377.471106   3349.009429\n",
-       "1 2005-06-30 -1055.257116 -5283.013792   3212.834837\n",
-       "2 2005-09-30  -223.253217 -4336.419076   3786.420251\n",
-       "3 2005-12-31  6646.043026  2429.725217  10364.521253\n",
-       "4 2006-03-31   912.670899 -3080.508978   4928.635267"
+       "0 2005-03-31  -638.489979 -5037.711010   3471.416306\n",
+       "1 2005-06-30 -1055.257116 -5503.465639   3322.289516\n",
+       "2 2005-09-30  -223.253217 -4165.937326   3894.679715\n",
+       "3 2005-12-31  6646.043026  2499.102502  10716.517815\n",
+       "4 2006-03-31   912.670899 -3036.385010   4853.655537"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +150,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -182,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
