--- a/amazon_revenue_forcasting/send_alert.ipynb
+++ b/amazon_revenue_forcasting/send_alert.ipynb
@@ -2,53 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install slack\n",
-    "#!pip install slackclient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: The directory '/home/jovyan/.cache/pip' or its parent directory is not owned or is not writable by the current user. The cache has been disabled. Check the permissions and owner of that directory. If executing pip with sudo, you should use sudo's -H flag.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: slack in /opt/conda/lib/python3.8/site-packages (0.0.2)\n",
+      "Requirement already satisfied: slackclient in /opt/conda/lib/python3.8/site-packages (2.9.3)\n",
+      "Requirement already satisfied: aiohttp<4.0.0,>3.5.2 in /opt/conda/lib/python3.8/site-packages (from slackclient) (3.7.4.post0)\n",
+      "Requirement already satisfied: async-timeout<4.0,>=3.0 in /opt/conda/lib/python3.8/site-packages (from aiohttp<4.0.0,>3.5.2->slackclient) (3.0.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.6.5 in /opt/conda/lib/python3.8/site-packages (from aiohttp<4.0.0,>3.5.2->slackclient) (3.10.0.2)\n",
+      "Requirement already satisfied: chardet<5.0,>=2.0 in /opt/conda/lib/python3.8/site-packages (from aiohttp<4.0.0,>3.5.2->slackclient) (3.0.4)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /opt/conda/lib/python3.8/site-packages (from aiohttp<4.0.0,>3.5.2->slackclient) (5.2.0)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /opt/conda/lib/python3.8/site-packages (from aiohttp<4.0.0,>3.5.2->slackclient) (1.7.0)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /opt/conda/lib/python3.8/site-packages (from aiohttp<4.0.0,>3.5.2->slackclient) (21.2.0)\n",
+      "Requirement already satisfied: idna>=2.0 in /opt/conda/lib/python3.8/site-packages (from yarl<2.0,>=1.0->aiohttp<4.0.0,>3.5.2->slackclient) (3.2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\n",
+      "WARNING: You are using pip version 21.2.3; however, version 21.2.4 is available.\n",
+      "You should consider upgrading via the '/opt/conda/bin/python -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
+    "os.system(\"pip install slack slackclient\")\n",
     "from slack import WebClient\n",
     "from slack.errors import SlackApiError"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def send_file_to_slack(file_path, token):\n",
-    "\turl = \"https://slack.com/api/files.upload\"\n",
+    "token = \"Enter Your Slack Token\"\n",
+    "channel = '#test'\n",
+    "text = \"Model is trained and future revenue generation is predicted.\"\n",
+    "file = \"output.csv\"\n",
+    "title = \"Amazon Revenue\"\n",
     "\n",
-    "    # this is where you add your query string. Please chage token value\n",
-    "    querystring = {\"token\": token}\n",
+    "client = WebClient(token=token)\n",
     "\n",
-    "    # this is where you define who do you want to send it to. Change channels to your target one\n",
-    "    payload = {\n",
-    "        \"channels\": xxxxxxxx,  # slack channel id \n",
-    "        \"initial_comment\": comment above the file should be here\"\n",
-    "    }\n",
-    "\n",
-    "    file_upload = {\n",
-    "        \"file\": (file_path, open(file_path, 'rb'), 'csv')\n",
-    "    }\n",
-    "\n",
-    "    response = requests.post(url, data=payload, params=querystring, files=file_upload)\n",
-    "\n",
-    "    if response.ok:\n",
-    "        return {\n",
-    "            \"message\": \"Successfully uploaded the file to slack\"\n",
-    "        }"
+    "try:\n",
+    "    response = client.chat_postMessage(\n",
+    "        channel=channel,\n",
+    "        text=text)\n",
+    "    response = client.files_upload(\n",
+    "        channels=channel,\n",
+    "        file=file,\n",
+    "        title=title\n",
+    ")\n",
+    "except SlackApiError as e:\n",
+    "    # You will get a SlackApiError if \"ok\" is False\n",
+    "    assert e.response[\"ok\"] is False\n",
+    "    assert e.response[\"error\"]  # str like 'invalid_auth', 'channel_not_found'\n",
+    "    print(f\"Got an error: {e.response['error']}\")"
    ]
   },
   {
@@ -56,28 +80,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "token=\"xoxp-2115816893510-2177419509890-2537746192294-5b045bf3b697a573baf1f1e915dcf3cb\"\n",
-    "\n",
-    "client = WebClient(token=token)\n",
-    "\n",
-    "try:\n",
-    "    response = client.chat_postMessage(\n",
-    "        channel='#random',\n",
-    "        text=\"Model is trained and future revenue generation is predicted. Here the output file of predicted revenue\")\n",
-    "    assert response[\"message\"][\"text\"] == text\n",
-    "    send_file_to_slack(\"output.csv\", token)\n",
-    "except SlackApiError as e:\n",
-    "    # You will get a SlackApiError if \"ok\" is False\n",
-    "    assert e.response[\"ok\"] is False\n",
-    "    assert e.response[\"error\"]  # str like 'invalid_auth', 'channel_not_found'\n",
-    "    print(f\"Got an error: {e.response['error']}\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -91,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
