change in variable names

--- a/automobile/automobile.ipynb
+++ b/automobile/automobile.ipynb
@@ -3111,7 +3111,7 @@
    ],
    "source": [
     "random_forest = RandomForestClassifier(n_estimators=100)\n",
-    "rf = random_forest.fit(X_train_rf, y_train_rf)\n",
+    "rf_auc = random_forest.fit(X_train_rf, y_train_rf)\n",
     "acc_random_forest = round(random_forest.score(X_train_rf, y_train_rf) * 100, 2)\n",
     "acc_random_forest"
    ]
@@ -3594,7 +3594,7 @@
     "results = pd.DataFrame({\n",
     "    'Model': ['Logistic Regression', 'Random Forest', 'Gaussian Naive Bayes', 'Support Vector Machine', 'Decision Tree', 'Preceptron', 'KNearest Neighbour', 'Stochastic Gradient Descent', 'Gradient Boosting Classifier'],\n",
     "    'Score': [acc_log, acc_random_forest, acc_gaussian, acc_linear_svc, acc_decision_tree, acc_perceptron, acc_knearest, acc_sgd, acc_gbc],\n",
-    "    'Model_abb': [lr, rf, gnb, svm, dt, per, knn, sgd, gbc]})\n",
+    "    'Model_abb': [lr, rf_auc, gnb, svm, dt, per, knn, sgd, gbc]})\n",
     "result_df = results.sort_values(by='Score', ascending=False)\n",
     "result_df = result_df.set_index('Score')\n",
     "result_df"
