--- a/katonic-sdk/feature-store/churn_modelling/churn_modelling.ipynb
+++ b/katonic-sdk/feature-store/churn_modelling/churn_modelling.ipynb
@@ -159,7 +159,7 @@
     "The preceding `write_table` function will:\n",
     "\n",
     "- Store all entity and feature view definitions in a local file called registry.db.\n",
-    "- Create an empty `SQLite` table for serving driver statistics features.\n",
+    "- Create an empty `Redis Server` table for serving driver statistics features.\n",
     "- Ensure that your data sources on `FileSource` are available."
    ]
   },
