fix: Updated data format

--- a/api-endpoint-inference/api_calling.ipynb
+++ b/api-endpoint-inference/api_calling.ipynb
@@ -111,8 +111,8 @@
     "\n",
     "features = X.values\n",
     "\n",
-    "for x_i in (features):\n",
-    "    data = {\"data\": [list(float(x) for x in x_i)]}\n",
+    "for x_i in features:\n",
+    "    data = {\"data\": [[float(x) for x in x_i]]}\n",
     "    result = requests.post(f\"{MODEL_API_ENDPOINT}\", json = data,verify=False, headers = {\"Authorization\":SECURE_TOKEN})\n",
     "    print(result.text)"
    ]
