sdk[filemanager]: Added remove objects in example

--- a/katonic-sdk/filemanager/filemanager.ipynb
+++ b/katonic-sdk/filemanager/filemanager.ipynb
@@ -331,6 +331,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Remove Object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from katonic.filemanager.deleteobjects import DeleteObject"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove a prefix recursively.\n",
+    "delete_object_list = map(\n",
+    "    lambda x: DeleteObject(x.object_name),\n",
+    "    client.list_objects(configs['PRIVATE_BUCKET'], \"data-2\", recursive=True),\n",
+    ")\n",
+    "errors = client.remove_objects(configs['PRIVATE_BUCKET'], delete_object_list)\n",
+    "for error in errors:\n",
+    "    print(\"error occured when deleting object\", error)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
