--- a/katonic-sdk/filemanager/filemanager.ipynb
+++ b/katonic-sdk/filemanager/filemanager.ipynb
@@ -355,7 +355,7 @@
     "# Remove a prefix recursively.\n",
     "delete_object_list = map(\n",
     "    lambda x: DeleteObject(x.object_name),\n",
-    "    client.list_objects(configs['PRIVATE_BUCKET'], \"data-2\", recursive=True),\n",
+    "    client.list_objects(configs['PRIVATE_BUCKET'], \"folder-name\", recursive=True),\n",
     ")\n",
     "errors = client.remove_objects(configs['PRIVATE_BUCKET'], delete_object_list)\n",
     "for error in errors:\n",
@@ -372,7 +372,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -415,7 +415,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "de7c534ced4c91973cabd96bad35a2762c7a57b0986e9ee4825d203524d682ef"
+   }
   }
  },
  "nbformat": 4,
