--- a/katonic-sdk/drift/drift - adwin.ipynb
+++ b/katonic-sdk/drift/drift - adwin.ipynb
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "from katonic.drift import ADWIN\n",
+    "from katonic.drift.adwin import ADWIN\n",
     "from sklearn.datasets import load_wine\n",
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
