--- a/katonic-sdk/pipeline/basic_pipeline_creation.ipynb
+++ b/katonic-sdk/pipeline/basic_pipeline_creation.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "# Define your function(s)\n",
-    "def print_something(data: int):\n",
+    "def print_something(data: str):\n",
     "    print(data)"
    ]
   },
