Fix: fbprophet package renamed to prophet

--- a/amazon_revenue_forcasting/model_training.ipynb
+++ b/amazon_revenue_forcasting/model_training.ipynb
@@ -63,7 +63,9 @@
    ],
    "source": [
     "import os\n",
-    "os.system(\"pip install pystan==2.19.1.1 fbprophet\")"
+    "os.system(\"pip install pystan==2.19.1.1\")\n",
+    "os.system(\"pip install -U numpy\")\n",
+    "os.system(\"pip install convertdate prophet\")"
    ]
   },
   {
@@ -80,7 +82,7 @@
     }
    ],
    "source": [
-    "from fbprophet import Prophet\n",
+    "from prophet import Prophet\n",
     "import pandas as pd\n",
     "import pickle"
    ]
