--- a/amazon_revenue_forcasting/prediction.ipynb
+++ b/amazon_revenue_forcasting/prediction.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.system(\"pip install pystan==2.19.1.1 fbprophet\")"
+    "os.system(\"pip install pystan==2.19.1.1\")\n",
+    "os.system(\"pip install -U numpy\")\n",
+    "os.system(\"pip install convertdate prophet\")"
    ]
   },
   {
@@ -18,7 +20,7 @@
    "source": [
     "import pandas as pd\n",
     "import pickle\n",
-    "from fbprophet import Prophet"
+    "from prophet import Prophet"
    ]
   },
   {
